# orderbook-aggregator

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md
config/: exchanges.json
include/: exchange_factory.hpp  exchange_interface.hpp  http_client.hpp  order_book.hpp  price_calculator.hpp  rate_limiter.hpp  types.hpp
src/: exchange_factory.cpp  http_client.cpp  main.cpp  order_book.cpp  price_calculator.cpp  rate_limiter.cpp
src/exchanges/: coinbase_client.cpp  gemini_client.cpp
tests/: verify_calculation.cpp
